@@ -31,6 +31,7 @@ import dev.flang.fuir.FUIR;
 import dev.flang.fuir.analysis.AbstractInterpreter;
 import dev.flang.fuir.analysis.TailCall;
 
+import static dev.flang.ir.IR.NO_CLAZZ;
 import static dev.flang.ir.IR.NO_SITE;
 
 import dev.flang.be.jvm.classfile.ClassFile;
@@ -42,6 +43,7 @@ import dev.flang.be.jvm.runtime.Runtime;
 
 import dev.flang.util.ANY;
 import dev.flang.util.Errors;
+import dev.flang.util.FuzionConstants;
 import dev.flang.util.FuzionOptions;
 import dev.flang.util.List;
 import dev.flang.util.Map2Int;
@@ -56,6 +58,7 @@ import java.io.PrintWriter;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 
 import java.util.jar.Attributes;
 import java.util.jar.JarEntry;
@@ -338,7 +341,7 @@ Dynamically bounds calls are performed on a reference target, which means the
 target instance has a unique corresponding Java class. This means we could
 leverage the Java class to perform this call, either by
 
-* adding an `id()` method to `FuzionInstance` that is redefined for each ref
+* adding an {@code id()} method to {@code FuzionInstance} that is redefined for each ref
   type to return the corresponding clazz id. A `lookupswitch` could then be used
   to perform the call (in O(log n)!)
 
@@ -605,7 +608,6 @@ should be avoided as much as possible.
               "dev/flang/be/jvm/runtime/Runtime$1.class",
               "dev/flang/be/jvm/runtime/Runtime$2.class",
               "dev/flang/be/jvm/runtime/Runtime$3.class",
-              "dev/flang/be/jvm/runtime/Runtime$4.class",
               "dev/flang/be/jvm/runtime/Runtime$Abort.class",
               "dev/flang/util/ANY.class",
               "dev/flang/util/Errors.class",
@@ -824,7 +826,7 @@ should be avoided as much as possible.
    */
   String mainName()
   {
-    return _fuir.clazzBaseName(_fuir.mainClazzId());
+    return _fuir.clazzBaseName(_fuir.mainClazz());
   }
 
 
@@ -841,7 +843,7 @@ should be avoided as much as possible.
 
 
   /**
-   * For `-jar` backend: Name of the JAR file to be created.
+   * For {@code -jar} backend: Name of the JAR file to be created.
    *
    * @return jar file path created from main feature's base name
    */
@@ -852,7 +854,7 @@ should be avoided as much as possible.
 
 
   /**
-   * For `-classes` backend: Name of the classes directory to be created.
+   * For {@code -classes} backend: Name of the classes directory to be created.
    *
    * @return classes directory name created from main feature's base name
    */
@@ -863,7 +865,7 @@ should be avoided as much as possible.
 
 
   /**
-   * For `-jar` and `-classes` backend: Path of the executable script to run the
+   * For {@code -jar} and {@code -classes} backend: Path of the executable script to run the
    * application.
    *
    * @return executable script path created from main feature's base name
@@ -875,10 +877,10 @@ should be avoided as much as possible.
 
 
   /**
-   * Create shell script to execute `java` with given arguments.  This is used
+   * Create shell script to execute {@code java} with given arguments.  This is used
    * by -jar and -classes backends to create an executable file.
    *
-   * @param args the space-separated arguments for `java`.
+   * @param args the space-separated arguments for {@code java}.
    */
   void createJavaExecutable(String args)
   {
@@ -892,12 +894,27 @@ should be avoided as much as possible.
                                   """
                                   #!/bin/sh
 
-                                  java -D%s="$0" %s "$@"
+                                  SCRIPT_PATH="$(dirname "$(readlink -f "$0")")"
+
+                                  LD_LIBRARY_PATH="$LD_LIBRARY_PATH:$SCRIPT_PATH" \
+                                  PATH="$PATH:$SCRIPT_PATH" \
+                                  DYLD_FALLBACK_LIBRARY_PATH="$DYLD_FALLBACK_LIBRARY_PATH:$SCRIPT_PATH" \
+                                  java --enable-preview --enable-native-access=ALL-UNNAMED -D%s="$0" %s "$@"
                                   """,
                                   FUZION_COMMAND_PROPERTY,
                                   args));
         out.close();
         f.setExecutable(true);
+        for (String str : new List<>("libfuzion_rt.so", "libfuzion_rt.dylib", "fuzion_rt.dll"))
+          {
+            var file = Path.of(System.getProperty(FuzionConstants.FUZION_HOME_PROPERTY)).resolve("lib/" + str);
+            if (file.toFile().exists())
+              {
+                Files.copy(file,
+                           executableName.toAbsolutePath().getParent().resolve(str),
+                           StandardCopyOption.REPLACE_EXISTING);
+              }
+          }
       }
     catch (IOException io)
       {
@@ -985,31 +1002,84 @@ should be avoided as much as possible.
              Names.METHOD_HANDLE_FIELD_NAME,
              Names.CT_JAVA_LANG_INVOKE_METHODHANDLE.descriptor());
     var rt = _fuir.clazzResultClazz(cl);
+
+    if (CHECKS) check
+      (!fieldExists(_fuir.clazzResultField(cl)));
+
     cf.addToClInit(
       Expr
-        .stringconst(_fuir.clazzBaseName(cl))                                          // String
-        .andThen(funDescArgs(cl))                                                      // String, (MemoryLayout), [MemoryLayout
-        // invoking: FunctionDescriptor.of(...) / FunctionDescriptor.ofVoid(...)
-        .andThen(Expr.invokeStatic(
-          Names.JAVA_LANG_FOREIGN_FUNCTIONDESCRIPTOR,
-          _fuir.clazzIsUnitType(rt) ? "ofVoid": "of",
-          _fuir.clazzIsUnitType(rt)
-              ? "(" + Names.CT_JAVA_LANG_FOREIGN_MEMORYLAYOUT.array().descriptor() + ")" + Names.CT_JAVA_LANG_FOREIGN_FUNCTIONDESCRIPTOR.descriptor()
-              : "(" + Names.CT_JAVA_LANG_FOREIGN_MEMORYLAYOUT.descriptor() + Names.CT_JAVA_LANG_FOREIGN_MEMORYLAYOUT.array().descriptor() + ")" + Names.CT_JAVA_LANG_FOREIGN_FUNCTIONDESCRIPTOR.descriptor(),
-          Names.CT_JAVA_LANG_FOREIGN_FUNCTIONDESCRIPTOR,
-          -1,
-          true)
-        )                                                                             // String, FunctionDescriptor
-        .andThen(Expr.invokeStatic(
-          Names.RUNTIME_CLASS,
-          "get_method_handle",
-          "(" + Names.JAVA_LANG_STRING.descriptor() + Names.CT_JAVA_LANG_FOREIGN_FUNCTIONDESCRIPTOR.descriptor() +")" +  Names.CT_JAVA_LANG_INVOKE_METHODHANDLE.descriptor(),
-          Names.CT_JAVA_LANG_INVOKE_METHODHANDLE)
-        )                                                                              // MethodHandle
+        .stringconst(_fuir.clazzNativeName(cl))                                        // String
+        .andThen(functionDescriptorArgs(cl))                                           // String, (MemoryLayout), [MemoryLayout
+        .andThen(invokeFunctionDescriptorOf(_fuir.clazzIsUnitType(rt)))                // String, FunctionDescriptor
+        .andThen(libraryArray())                                                       // String, FunctionDescriptor, [String
+        .andThen(invoke_get_method_handle())                                           // MethodHandle
         .andThen(Expr.putstatic(_names.javaClass(cl),
                                 Names.METHOD_HANDLE_FIELD_NAME,
                                 Names.CT_JAVA_LANG_INVOKE_METHODHANDLE))
     );
+  }
+
+
+  /**
+   * @return code that puts a {@code String[]} on the stack
+   * filled with the libraries of command line option
+   * {@code -JLibraries}
+   */
+  private Expr libraryArray()
+  {
+    var libs = _options._jLibs
+      .map(l -> l.split(" "))
+      .orElse(new String[0]);
+
+    var result = Expr
+        .iconst(libs.length)
+        .andThen(Types.JAVA_LANG_STRING.newArray());
+
+    for (int i = 0; i < libs.length; i++)
+      {
+        result = result
+          .andThen(Expr.DUP)                             // T[], T[]
+          .andThen(Expr.iconst(i))                       // T[], T[], idx
+          .andThen(Expr.stringconst(libs[i]))            // T[], T[], idx, data
+          .andThen(Types.JAVA_LANG_STRING.xastore());    // T[]
+      }
+    return result;
+  }
+
+
+  /**
+   * create Expr for invoking {@link java.lang.foreign.FunctionDescriptor.of}
+   * or {@link java.lang.foreign.FunctionDescriptor.ofVoid}
+   *
+   * @param resultsInUnit
+   */
+  private Expr invokeFunctionDescriptorOf(boolean resultsInUnit)
+  {
+    return Expr.invokeStatic(
+      Names.JAVA_LANG_FOREIGN_FUNCTIONDESCRIPTOR,
+      resultsInUnit ? "ofVoid": "of",
+      resultsInUnit ? "(" + Names.CT_JAVA_LANG_FOREIGN_MEMORYLAYOUT.array().descriptor() + ")"
+                      + Names.CT_JAVA_LANG_FOREIGN_FUNCTIONDESCRIPTOR.descriptor()
+                    : "(" + Names.CT_JAVA_LANG_FOREIGN_MEMORYLAYOUT.descriptor()
+                      + Names.CT_JAVA_LANG_FOREIGN_MEMORYLAYOUT.array().descriptor() + ")"
+                      + Names.CT_JAVA_LANG_FOREIGN_FUNCTIONDESCRIPTOR.descriptor(),
+      Names.CT_JAVA_LANG_FOREIGN_FUNCTIONDESCRIPTOR,
+      -1,
+      true);
+  }
+
+
+  /*
+   * create Expr for invoking `Runtime.get_method_handle`
+   */
+  private Expr invoke_get_method_handle()
+  {
+    return Expr.invokeStatic(
+      Names.RUNTIME_CLASS,
+      "get_method_handle",
+      "(" + Names.JAVA_LANG_STRING.descriptor() + Names.CT_JAVA_LANG_FOREIGN_FUNCTIONDESCRIPTOR.descriptor() + Types.JAVA_LANG_STRING.array().descriptor() + ")"
+        + Names.CT_JAVA_LANG_INVOKE_METHODHANDLE.descriptor(),
+      Names.CT_JAVA_LANG_INVOKE_METHODHANDLE);
   }
 
 
@@ -1019,14 +1089,14 @@ should be avoided as much as possible.
    * @param cc
    * @return
    */
-  private Expr funDescArgs(int cc)
+  private Expr functionDescriptorArgs(int cc)
   {
     var result = Expr.UNIT;
     if (!_fuir.clazzIsUnitType(_fuir.clazzResultClazz(cc)))
       {
         result = result.andThen(layout(_fuir.clazzResultClazz(cc)));
       }
-    var jt = new ClassType(Names.JAVA_LANG_FOREIGN_VALUELAYOUT);
+    var jt = Names.CT_JAVA_LANG_FOREIGN_MEMORYLAYOUT;
     result = result
       .andThen(Expr.iconst(_fuir.clazzArgCount(cc)))
       .andThen(jt.newArray());
@@ -1071,24 +1141,62 @@ should be avoided as much as possible.
         new ClassType("java/lang/foreign/ValueLayout$OfDouble"));
       case c_u64 -> Expr.getstatic(Names.JAVA_LANG_FOREIGN_VALUELAYOUT, "JAVA_LONG",
         new ClassType("java/lang/foreign/ValueLayout$OfLong"));
-      case c_sys_ptr -> Expr.getstatic(Names.JAVA_LANG_FOREIGN_VALUELAYOUT, "ADDRESS",
-        new ClassType("java/lang/foreign/AddressLayout"));
-      default -> {
-        Errors.fatal("NYI: CodeGen.layout " + _fuir.getSpecialClazz(c));
-        yield null;
-      }
+      default ->
+        isAddressLike(c)
+          ? Expr.getstatic(Names.JAVA_LANG_FOREIGN_VALUELAYOUT, "ADDRESS", Names.CT_JAVA_LANG_FOREIGN_ADDRESS_LAYOUT)
+          : structLayout(c);
       };
+  }
+
+
+  /**
+   * Build structlayout for clazz c
+   */
+  private Expr structLayout(int c)
+  {
+    var argCount = _fuir.clazzArgCount(c);
+    var result = Expr
+      .iconst(argCount)
+      .andThen(Names.CT_JAVA_LANG_FOREIGN_MEMORYLAYOUT.newArray());
+
+    for (int i = 0; i < argCount; i++)
+      {
+        result = result
+          .andThen(Expr.DUP)                                           // T[], T[]
+          .andThen(Expr.iconst(i))                                     // T[], T[], idx
+          .andThen(layout(_fuir.clazzArgClazz(c, i)))                  // T[], T[], idx, data
+          .andThen(Names.CT_JAVA_LANG_FOREIGN_MEMORYLAYOUT.xastore()); // T[]
+      }
+
+    return result                                                      // T[]
+      .andThen(Expr.invokeStatic(                                      // StructLayout
+        Names.CT_JAVA_LANG_FOREIGN_MEMORYLAYOUT.className(),
+        "structLayout",
+        "(" + Names.CT_JAVA_LANG_FOREIGN_MEMORYLAYOUT.array().descriptor() + ")"
+            + Names.CT_JAVA_LANG_FOREIGN_STRUCT_LAYOUT.descriptor(),
+        Names.CT_JAVA_LANG_FOREIGN_STRUCT_LAYOUT,
+        -1,
+        true));
+  }
+
+
+  /**
+   * Is the class c effectively an address in native world?
+   */
+  boolean isAddressLike(int c)
+  {
+    return _fuir.clazzIsRef(c) || _fuir.clazzIsArray(c) || _fuir.lookupCall(c) != NO_CLAZZ;
   }
 
 
   int current_index(int cl)
   {
-    if (_types.isScalar(cl))
+    if (_fuir.isScalar(cl))
       {
         return 0;
       }
     var o = _fuir.clazzOuterClazz(cl);
-    var l = _types.hasOuterRef(cl) ? (_types.isScalar(o) ? _types.javaType(o).stackSlots()  // outer of scalars like i64 are just copies of the value
+    var l = _types.hasOuterRef(cl) ? (_fuir.isScalar(o) ? _types.javaType(o).stackSlots()  // outer of scalars like i64 are just copies of the value
                                                          : 1)
                                    : 0;
     for (var j = 0; j < _fuir.clazzArgCount(cl); j++)
@@ -1100,6 +1208,10 @@ should be avoided as much as possible.
     return l;
   }
 
+
+  /**
+   * Byte code to call constructor with zero arguments of class c.
+   */
   Expr new0(int cl)
   {
     var n = _names.javaClass(cl);
@@ -1121,7 +1233,7 @@ should be avoided as much as possible.
   Expr prolog(int cl)
   {
     var result = Expr.UNIT;
-    if (!_types.isScalar(cl))  // not calls like `u8 0x20` or `f32 3.14`.
+    if (!_fuir.isScalar(cl))  // not calls like `u8 0x20` or `f32 3.14`.
       {
         var vti = _types.resultType(cl).vti();
         result = result.andThen(new0(cl))
@@ -1269,9 +1381,24 @@ should be avoided as much as possible.
    */
   Expr reportErrorInCode(String msg)
   {
-    return Expr.stringconst(msg)
+    return Expr.stringconst(msg, true)
       .andThen(Expr.invokeStatic(Names.RUNTIME_CLASS,"fatal","(Ljava/lang/String;)V", PrimitiveType.type_void))
       .andThen(Expr.endless_loop());
+  }
+
+
+  /**
+   * Create code that is supposed to be unreachable.
+   *
+   * @param site a site index where this unreachable code occured
+   *
+   * @param msg some text explaining what kind of statement we are trying to execute.
+   *
+   * @return an Expr to reprot the error and exit(1).
+   */
+  Expr reportUnreachable(int site, String msg)
+  {
+    return reportErrorInCode("As per data flow analysis this code should be unreachable. " + msg + " " + _fuir.siteAsString(site));
   }
 
 
@@ -1327,9 +1454,9 @@ should be avoided as much as possible.
   /**
    * Alloc local var slots for the given routine.
    *
-   * @param cl id of clazz to generate code for
+   * @param si id of clazz to generate code for
    *
-   * @param numSlots the number of slots to be alloced
+   * @param numSlots the number of slots to be allocated
    *
    * @return the local var index of the allocated slots
    */
@@ -1434,7 +1561,7 @@ should be avoided as much as possible.
    *
    * @param i the local variable index whose slot we are looking for.
    *
-   * @return the slot that contains arg #i on a call to the Java code for `cl`.
+   * @return the slot that contains arg #i on a call to the Java code for {@code cl}.
    */
   public int argSlot(int cl, int i)
   {
@@ -1463,7 +1590,7 @@ should be avoided as much as possible.
   public JavaType javaTypeOfTarget(int cl)
   {
     var o = _fuir.clazzOuterRef(cl);
-    return o == -1 ? PrimitiveType.type_void
+    return o == NO_CLAZZ ? PrimitiveType.type_void
                    : _types.javaType(_fuir.clazzResultClazz(o));
   }
 
@@ -1473,9 +1600,9 @@ should be avoided as much as possible.
    *
    * @param bytes the utf8 bytes of the string.
    */
-  Pair<Expr, Expr> constString(byte[] bytes)
+  Pair<Expr, Expr> boxedConstString(byte[] bytes)
   {
-    return constString(Expr.stringconst(bytes)
+    return boxedConstString(Expr.stringconst(bytes)
                        .andThen(Expr.invokeStatic(Names.RUNTIME_CLASS,
                                                   Names.RUNTIME_INTERNAL_ARRAY_FOR_CONST_STRING,
                                                   Names.RUNTIME_INTERNAL_ARRAY_FOR_CONST_STRING_SIG,
@@ -1489,10 +1616,11 @@ should be avoided as much as possible.
    *
    * @param bytes the utf8 bytes of the string as a Java string.
    */
-  Pair<Expr, Expr> constString(Expr bytes)
+  Pair<Expr, Expr> boxedConstString(Expr bytes)
   {
-    var cs = _fuir.clazz_Const_String();
-    var cs_utf8_data = _fuir.clazz_Const_String_utf8_data();
+    var cs = _fuir.clazz_const_string();
+    var ref_cs = _fuir.clazz_ref_const_string();
+    var cs_utf8_data = _fuir.clazz_const_string_utf8_data();
     var arr = _fuir.clazz_array_u8();
     var internalArray = _fuir.lookup_array_internal_array(arr);
     var data = _fuir.clazz_fuzionSysArray_u8_data();
@@ -1513,7 +1641,15 @@ should be avoided as much as possible.
       .andThen(putfield(length))                      //        cs, cs, arr, arr, fsa
       .andThen(putfield(internalArray))               //        cs, cs, arr
       .andThen(putfield(cs_utf8_data))                //        cs
-      .is(_types.resultType(cs));                     //        -
+      .andThen(Expr                                   //        cs (boxed)
+        .invokeStatic(
+          _names.javaClass(ref_cs),
+          Names.BOX_METHOD_NAME,
+          _types.boxSignature(ref_cs),
+          _types.javaType(ref_cs)
+        )
+      );
+
     return new Pair<>(res, Expr.UNIT);
   }
 
@@ -1525,7 +1661,7 @@ should be avoided as much as possible.
    */
   Pair<Expr, Expr> constString(String str)
   {
-    return constString(str.getBytes(StandardCharsets.UTF_8));
+    return boxedConstString(str.getBytes(StandardCharsets.UTF_8));
   }
 
 
@@ -1553,7 +1689,7 @@ should be avoided as much as possible.
 
 
   /**
-   * Create code to create a constant `array i8` and `array u8`.
+   * Create code to create a constant {@code array i8} and {@code array u8}.
    *
    * @param bytes the byte data of the array contents in Fuzions serialized from
    * (little endian).
@@ -1571,7 +1707,7 @@ should be avoided as much as possible.
 
 
   /**
-   * Create code to create a constant `array i16`.
+   * Create code to create a constant {@code array i16}.
    *
    * @param bytes the byte data of the array contents in Fuzions serialized from
    * (little endian).
@@ -1588,7 +1724,7 @@ should be avoided as much as possible.
 
 
   /**
-   * Create code to create a constant `array u16`.
+   * Create code to create a constant {@code array u16}.
    *
    * @param bytes the byte data of the array contents in Fuzions serialized from
    * (little endian).
@@ -1605,7 +1741,7 @@ should be avoided as much as possible.
 
 
   /**
-   * Create code to create a constants `array i32` and `array u32`.
+   * Create code to create a constants {@code array i32} and {@code array u32}.
    *
    * @param bytes the byte data of the array contents in Fuzions serialized from
    * (little endian).
@@ -1622,7 +1758,7 @@ should be avoided as much as possible.
 
 
   /**
-   * Create code to create a constant `array i64` and `array u64`.
+   * Create code to create a constant {@code array i64} and {@code array u64}.
    *
    * @param bytes the byte data of the array contents in Fuzions serialized from
    * (little endian).
@@ -1639,7 +1775,7 @@ should be avoided as much as possible.
 
 
   /**
-   * Create code to create a constants `array f32`.
+   * Create code to create a constants {@code array f32}.
    *
    * @param bytes the byte data of the array contents in Fuzions serialized from
    * (little endian).
@@ -1656,7 +1792,7 @@ should be avoided as much as possible.
 
 
   /**
-   * Create code to create a constant `array f64`.
+   * Create code to create a constant {@code array f64}.
    *
    * @param bytes the byte data of the array contents in Fuzions serialized from
    * (little endian).
@@ -1719,13 +1855,18 @@ should be avoided as much as possible.
    */
   boolean fieldExists(int field)
   {
-    var occ   = _fuir.clazzOuterClazz(field);
-    var rt = _fuir.clazzResultClazz(field);
+    var result = false;
+    if (field != NO_CLAZZ)
+      {
+        var occ   = _fuir.clazzOuterClazz(field);
+        var rt = _fuir.clazzResultClazz(field);
 
-    return _fuir.hasData(rt)       &&
-      !_types.isScalar(occ)        &&
-      _types.clazzNeedsCode(field) &&
-      _types.resultType(rt) != PrimitiveType.type_void;
+        result = _fuir.hasData(rt)       &&
+          !_fuir.isScalar(occ)        &&
+          _types.clazzNeedsCode(field) &&
+          _types.resultType(rt) != PrimitiveType.type_void;
+      }
+    return result;
   }
 
 
@@ -1812,7 +1953,7 @@ should be avoided as much as possible.
           .andThen(LOAD_UNIVERSE);
       }
     return
-      _types.isScalar(occ)      ? tvalue :   // reading, e.g., `val` field from `i32` is identity operation
+      _fuir.isScalar(occ)      ? tvalue :   // reading, e.g., `val` field from `i32` is identity operation
       _fuir.clazzIsVoidType(rt) ? null       // NYI: UNDER DEVELOPMENT: this should not be possible, a field of type void is guaranteed to be uninitialized!
                                 : tvalue.getFieldOrUnit(_names.javaClass(occ),
                                                         _names.field(f),
@@ -1825,16 +1966,16 @@ should be avoided as much as possible.
    *
    * @param s site of the assignment or NO_SITE if this is a call in an interface method stub.
    *
-   * @param tvalue the target value that contains the field
-   *
    * @param f the field
-   *
-   * @param value the new value for the field
    *
    * @param rt the type of the field.
    *
+   * @param tvalue the target value that contains the field
+   *
+   * @param value the new value for the field
+   *
    */
-  Expr assignField(int s, Expr tvalue, int f, Expr value, int rt)
+  Expr assignField(int s, int f, int rt, Expr tvalue, Expr value)
   {
     if (CHECKS) check
       (tvalue != null || !_fuir.hasData(rt) || _fuir.clazzOuterClazz(f) == _fuir.clazzUniverse(),
@@ -1866,7 +2007,7 @@ should be avoided as much as possible.
       {
         res = Expr.comment("Not setting field `" + _fuir.clazzAsString(f) + "`: "+
                            (!_fuir.hasData(rt)       ? "type `" + _fuir.clazzAsString(rt) + "` is a unit type" :
-                            _types.isScalar(occ) ? "target type is a scalar `" + _fuir.clazzAsString(occ) + "`"
+                            _fuir.isScalar(occ) ? "target type is a scalar `" + _fuir.clazzAsString(occ) + "`"
                                                  : "FUIR.clazzNeedsCode() is false for this field"))
           // make sure we evaluate tvalue and value:
           .andThen(tvalue.drop())
@@ -1883,9 +2024,9 @@ should be avoided as much as possible.
    * this creates a new instance and copies all the fields from value into the
    * new instance.
    *
-   * NYI: OPTIMIZATION: Once value features like `point(x,y i32)` are
-   * represented as tuples of primitive values (`int, int`) instead of instances
-   * of Java classes (`class Point { int x, y; }`, this cloning will no longer
+   * NYI: OPTIMIZATION: Once value features like {@code point(x,y i32)} are
+   * represented as tuples of primitive values ({@code int, int}) instead of instances
+   * of Java classes ({@code class Point { int x, y; }}, this cloning will no longer
    * be needed.
    *
    * @param s site of code that requires this cloning
@@ -1895,7 +2036,7 @@ should be avoided as much as possible.
    * @param rt the Fuzion type of the value
    *
    * @param f iff this is called to assign the cloned value to a field, the
-   * field id. -1 if not assigned to a field.  This is used to not clone a value
+   * field id. NO_CLAZZ if not assigned to a field.  This is used to not clone a value
    * if assigned to an outer ref.
    *
    * @return value iff cloning was not required, or an expression that creates a
@@ -1904,8 +2045,8 @@ should be avoided as much as possible.
   Expr cloneValue(int s, Expr value, int rt, int f)
   {
     if (!_fuir.clazzIsRef(rt) &&
-        (f == -1 || !_fuir.clazzFieldIsAdrOfValue(f)) && // an outer ref field must not be cloned
-        !_types.isScalar(rt) &&
+        (f == NO_CLAZZ || !_fuir.clazzFieldIsAdrOfValue(f)) && // an outer ref field must not be cloned
+        !_fuir.isScalar(rt) &&
         (!_fuir.clazzIsChoice(rt) || _types._choices.kind(rt) == Choices.ImplKind.general))
       {
         var vti = _types.resultType(rt).vti();
@@ -1925,7 +2066,7 @@ should be avoided as much as possible.
               .andThen(Expr.getfield(cc, Names.TAG_NAME, PrimitiveType.type_int))
               .andThen(Expr.putfield(cc, Names.TAG_NAME, PrimitiveType.type_int));
             var hasref = false;
-            for (int i = 0; i < _fuir.clazzNumChoices(rt); i++)
+            for (int i = 0; i < _fuir.clazzChoiceCount(rt); i++)
               {
                 var tc = _fuir.clazzChoice(rt, i);
                 if (_fuir.clazzIsRef(tc))
@@ -1940,7 +2081,7 @@ should be avoided as much as possible.
                         var fn = _types._choices.generalValueFieldName(rt, i);
                         var v = Expr.aload(vl, jt)
                           .andThen(Expr.getfield(cc, fn, ft));
-                        var cv = cloneValueOrNull(s, v, tc, -1);
+                        var cv = cloneValueOrNull(s, v, tc, NO_CLAZZ);
                         e = e
                           .andThen(Expr.aload(nl, jt))
                           .andThen(cv)
@@ -1959,7 +2100,7 @@ should be avoided as much as possible.
           }
         else
           {
-            for (var i = 0; i < _fuir.clazzNumFields(rt); i++)
+            for (var i = 0; i < _fuir.clazzFieldCount(rt); i++)
               {
                 var fi = _fuir.clazzField(rt, i);
                 if (fieldExists(fi))
@@ -1994,7 +2135,7 @@ should be avoided as much as possible.
    * In a product type, the value of a field may be null if that value was not
    * yet initialized. This may currently be the case of local variables on
    * branches that were executed yet, or that may never be executed at all as for
-   * `str` in
+   * {@code str} in
    *
    *    point (x, y i32) is
    *      if x > y
@@ -2130,7 +2271,7 @@ should be avoided as much as possible.
                                        Expr.iconst(1),
                                        Expr.iconst(0)));
                 var hasref = false;
-                for (int i = 0; i < _fuir.clazzNumChoices(rt); i++)
+                for (int i = 0; i < _fuir.clazzChoiceCount(rt); i++)
                   {
                     var tc = _fuir.clazzChoice(rt, i);
                     if (_fuir.clazzIsRef(tc))
@@ -2176,10 +2317,10 @@ should be avoided as much as possible.
             else // not a choice, so a 'normal' product type
               {
                 if (CHECKS) check
-                  (_fuir.clazzNumFields(rt) > 0);  // unit-types where handled above
+                  (_fuir.clazzFieldCount(rt) > 0);  // unit-types where handled above
 
                 var count = 0;
-                for (var i = 0; i < _fuir.clazzNumFields(rt); i++)
+                for (var i = 0; i < _fuir.clazzFieldCount(rt); i++)
                   {
                     var fi = _fuir.clazzField(rt, i);
                     if (fieldExists(fi))
@@ -2214,6 +2355,12 @@ should be avoided as much as possible.
       (ecl != FUIR.NO_CLAZZ);
 
     return _effectIds.add(ecl);
+  }
+
+
+  public boolean isValueType(int rt)
+  {
+    return !isAddressLike(rt) && !_types.javaType(rt).isPrimitive();
   }
 
 
